# dt-sandboxes

./: .gitignore  fast.sh  gemini.md  pyproject.toml
docs/: Deepthought_Ed_OS.md
scripts/: __init__.py  check_compliance.sh  provision_vendors.py  verify_harvesters.py
src/dt_sandboxes/: __init__.py  base.py  kaplay.py  schemas.py
src/dt_sandboxes/engines/: __init__.py
src/dt_sandboxes/engines/art/: harvester.py  sandbox.py
src/dt_sandboxes/engines/art/static/: piskel_harvester.js
src/dt_sandboxes/engines/audio/: harvester.py  sandbox.py
src/dt_sandboxes/engines/audio/static/: audiomass_harvester.js
src/dt_sandboxes/engines/browser/extension/: background.js  content.js  manifest.json
src/dt_sandboxes/engines/cad/: __init__.py  harvester.py  openjscad_harvester.py  sandbox.py
src/dt_sandboxes/engines/cad/static/: harvester.js  openjscad_harvester.js
src/dt_sandboxes/engines/chemistry/: __init__.py  harvester.py  phet_harvester.py  sandbox.py  sandboxels_harvester.py
src/dt_sandboxes/engines/chemistry/static/: harvester.js  phet_harvester.js  sandboxels_harvester.js
src/dt_sandboxes/engines/design/: __init__.py  harvester.py  sandbox.py
src/dt_sandboxes/engines/design/static/: harvester.js
src/dt_sandboxes/engines/electronics/: harvester.py  sandbox.py
src/dt_sandboxes/engines/electronics/static/: circuitjs_harvester.js  qjs_harvester.js
src/dt_sandboxes/engines/kaplay/: __init__.py  harvester.py  hook.py  sandbox.py  schemas.py
src/dt_sandboxes/engines/kaplay/static/: harvester.js  index.html
src/dt_sandboxes/engines/logic/: harvester.py  sandbox.py
src/dt_sandboxes/engines/logic/static/: makecode_harvester.js
src/dt_sandboxes/engines/math/: harvester.py  sandbox.py
src/dt_sandboxes/engines/math/static/: geogebra_harvester.js  mathigon_harvester.js
src/dt_sandboxes/engines/minetest/: __init__.py  harvester.py  sandbox.py
src/dt_sandboxes/engines/music/: __init__.py  beepbox_harvester.py  harvester.py  sandbox.py
src/dt_sandboxes/engines/narrative/: harvester.py  sandbox.py
src/dt_sandboxes/engines/notebook/: starboard_harvester.py
src/dt_sandboxes/engines/science/: harvester.py  sandbox.py
src/dt_sandboxes/engines/snap/: __init__.py  harvester.py  sandbox.py
src/dt_sandboxes/engines/snap/static/: harvester.js
src/dt_sandboxes/engines/static/: bridge.js
tests/: __init__.py  test_architecture.py  test_cad.py  test_chemistry.py  test_design.py  test_kaplay.py  test_kaplay_hook.py  test_music.py  test_schemas.py  test_snap.py
tests/crucible/: __init__.py  harness.py  test_kaplay_integration.py  test_standardized_harvesters.py
vendors/: manifest.json  phet-gravity.html
(+8 files in other folders)
